# open-denkaru

./: .env.example  .gitignore  CLAUDE.md  Claudejp.md  Makefile  README.ja.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile.dev  alembic.ini  create_simple_patients.py  create_test_patients.py  main.py  pyproject.toml  test_db.py  test_simple_api.py  verify_system.py
backend/alembic/: env.py
backend/alembic/versions/: 1b64cf39a311_add_patient_search_indexes.py  20250618_add_authentication_tables.py  20250622_add_medical_records_tables.py  37396702cee8_initial_migration_with_patient_model.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: ai_assistant.py  auth.py  health.py  lab_orders.py  medical_records.py  patients.py  prescriptions.py
backend/app/core/: auth_deps.py  config.py  database.py  encryption.py  input_sanitizer.py  logging.py  rate_limiter.py  security.py
backend/app/schemas/: __init__.py  auth.py  patient.py  prescription.py
backend/app/scripts/: create_test_data.py  seed_auth_data.py
backend/app/services/: ai_client.py
backend/app/utils/: audit.py
backend/storage/: .master_key
config/: backup.conf
database/: backup-system.sql  encryption-setup.sql
database/init/: 01-init.sql
docker/: docker-compose.backup.yml
docs/: backup-disaster-recovery.md  milestones.md  project-status.md
docs/architecture/: design-system.md  phase3-authentication-system.md
docs/development/: getting-started.md  phase3-implementation-guide.md  quick-test.md  startup-guide.md
docs/plan/: 01-project-foundation.md  02-core-functionality.md  03-security-multiuser.md  04-orca-integration.md  05-standards-ai.md  06-advanced-ai-features.md
docs/research/: chatgpt-search.md  claude-search.md
docs/status/: project-implementation-status-2025-06-22.md  project-status.md
frontend/: .eslintrc.json  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/appointments/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/patients/: layout.tsx  page.tsx
frontend/src/app/patients/[id]/: page.tsx
frontend/src/app/patients/new/: page.tsx
frontend/src/app/prescriptions/: layout.tsx  page.tsx
frontend/src/app/records/: layout.tsx  page.tsx
frontend/src/app/records/[id]/: page.tsx
frontend/src/app/records/[id]/edit/: page.tsx
frontend/src/app/records/new/: page.tsx
frontend/src/app/settings/: layout.tsx  page.tsx
frontend/src/app/users/: layout.tsx  page.tsx
frontend/src/components/audit/: AuditLogViewer.tsx
frontend/src/components/auth/: AuthGuard.tsx  PermissionGate.tsx
frontend/src/components/layout/: Navigation.tsx  ProtectedLayout.tsx
frontend/src/components/medical/: AIAssistant.tsx  LabOrderCard.tsx  MedicalBlockEditor.tsx  MedicationCard.tsx  PatientCard.tsx  PrescriptionCard.tsx  PrescriptionForm.tsx  PrescriptionFormPrint.tsx  SOAPRecordForm.tsx  SimpleSOAPEditor.tsx  StatusBadge.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/hooks/: useNavigationHeight.ts  usePatients.ts  usePermissions.ts
frontend/src/types/: appointment.ts  audit.ts  lab-order.ts  medical-record.ts  patient.ts  prescription.ts  user.ts
monitoring/: alertmanager.yml  prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
research/: Dockerfile.jupyter
scripts/: backup-automation.sh
